Refactor: Enhance SEO with updated meta tags and JSON-LD name.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <link rel="icon" type="image/svg+xml" href="/svg.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Niraj Paradva | Portfolio</title>
-  <meta name="description" content="Portfolio website of Niraj Paradva, a full stack developer." />
+  <!-- <meta name="description" content="Portfolio website of Niraj Paradva, a full stack developer." /> -->
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Niraj Paradva" />
+  <meta name="description"
+    content="Portfolio website of Niraj Paradva (Niraj Paradav), full stack developer working with JavaScript, React, Node.js, and more. See projects, skills, and contact info.">
+  <meta name="keywords" content="Niraj Paradva,niraj, niraj paradva, full stack developer, web developer, JavaScript, React, Node.js, portfolio">
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Person",
-  "name": "paradva niraj",
+  "name": "niraj paradva",
   "url": "https://niraj-paradva.vercel.app/",
   "image": "https://niraj-paradva.vercel.app/nicxx.jpg",
   "jobTitle": "Full Stack Developer",
